[package]
name = "tender_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
umya-spreadsheet = "2.3.1"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
select = { version = "0.6.1" }
clap = { version = "4.5.40", features = ["derive"] }
